--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <body>
     
 
+    <div class="card">
+        <div class="search">
+            <input type="text" placeholder="enter city name" spellcheck="false">
+            <button><img src="images/search.png" alt=""></button>
+        </div>
+    </div>
+
 
     <script src="script.js"></script>
 </body>
