--- a/index.html
+++ b/index.html
@@ -14,6 +14,40 @@
             <input type="text" placeholder="enter city name" spellcheck="false">
             <button><img src="images/search.png" alt=""></button>
         </div>
+        <div class="weather">
+            <img src="images/rain.png" class="weather-icon" alt="">
+            <h1 class="temp">22°c</h1>
+            <h2 class="city">Kathmandu</h2>
+            <div class="details">
+                <div class="col">
+                    <img src="images/humidity.png" alt="">
+                    <div>
+                        <p class="humdity">50%</p>
+                        <p>humidity</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="search">
+            <input type="text" placeholder="enter city name" spellcheck="false">
+            <button><img src="images/search.png" alt=""></button>
+        </div>
+        <div class="weather">
+            <img src="images/rain.png" class="weather-icon" alt="">
+            <h1 class="temp">22°c</h1>
+            <h2 class="city">Kathmandu</h2>
+            <div class="details">
+                <div class="col">
+                    <img src="images/wind.png" alt="">
+                    <div>
+                        <p class="wind">15 km/h</p>
+                        <p>Wind Speed</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 
